--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
 
-    <title>Liztere's Portfolio</title>
+    <title>Portfolio</title>
 
     <meta name="description" content="A list of places you can find me on the web.">
 
