--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <meta name="description" content="A list of places you can find me on the web.">
 
-    <link rel="shortcut icon" href="/images/favicon.png">
+    <link rel="shortcut icon" href="/img/favicon.png">
 
     <link rel="stylesheet" href="/css/styles.css">
   </head>
