--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <title>Portfolio</title>
 
-    <meta name="description" content="A list of places you can find me on the web.">
+    <meta name="description" content="Projects and other ramblings.">
 
     <link rel="shortcut icon" href="/img/favicon.png">
 
@@ -29,7 +29,7 @@
     <main>
       <section class="about">
         <h1>Liztere Fiol</h1>
-        <p></p>
+        <p>Projects and passions</p>
         <img src="img/jazz.png" alt="AI Gen Jazz Art">
       </section>
       <nav class="links">
